* lint fixes